--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ numerize==0.12
 numpy==1.23.5
 oauthlib==3.2.2
 openpyxl==3.1.2
-portaudio19-dev
+#portaudio19-dev
 portaudio
 pyaudio-wheels
 pyproject-toml
