--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ numpy==1.23.5
 oauthlib==3.2.2
 openpyxl==3.1.2
 pyaudio==0.2.11
-pyproject-toml==0.1.14
+#pyproject-toml==0.1.14
 PyAudio==0.2.11
 opt-einsum==3.3.0
 packaging==23.1
