--- a/requirements.txt
+++ b/requirements.txt
@@ -7,18 +7,18 @@ numpy==1.23.5
 oauthlib==3.2.2
 openpyxl==3.1.2
 pyaudio==0.2.11
-#pyproject-toml==0.1.14
+pyproject-toml
 PyAudio==0.2.11
 opt-einsum==3.3.0
 packaging==23.1
 pandas==2.0.1
 pandas-profiling==3.2.0
-streamlit==1.22.0
-streamlit-apexjs==0.0.3
-streamlit-card==0.0.4
-streamlit-elements==0.1.0
-streamlit-option-menu==0.3.2
-streamlit-pandas-profiling==0.1.3
+streamlit
+streamlit-apexjs
+streamlit-card
+streamlit-elements
+streamlit-option-menu
+streamlit-pandas-profiling
 plotly==5.14.1
 plotly-express==0.4.1
 scikit-learn==1.2.2
@@ -26,7 +26,7 @@ seaborn==0.12.2
 pmdarima==1.8.2
 statsmodels==0.13.3
 surprise==0.1
-#langchain==1.0.0
+langchain
 streamlit_chat==1.0.0
 datetime==4.4
 python-dateutil==2.8.2
