--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ packaging==23.1
 pandas==2.0.1
 pandas-profiling==3.2.0
 streamlit
+streamlit_chat
 streamlit-apexjs
 streamlit-card
 streamlit-elements
