--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,35 @@
-Markdown==3.4.3
-markdown-it-py==2.2.0
-MarkupSafe==2.1.2
-matplotlib==3.7.1
-numerize==0.12
-numpy==1.23.5
-oauthlib==3.2.2
-openpyxl==3.1.2
-pyaudio==0.2.11
+Markdown
+markdown-it-py
+MarkupSafe
+matplotlib
+numerize
+numpy
+oauthlib
+openpyxl
+pyaudio
 pyproject-toml
-PyAudio==0.2.11
-opt-einsum==3.3.0
-packaging==23.1
-pandas==2.0.1
-pandas-profiling==3.2.0
+PyAudio
+opt-einsum
+packaging
+pandas
+pandas-profiling
 streamlit
 streamlit-apexjs
 streamlit-card
 streamlit-elements
 streamlit-option-menu
 streamlit-pandas-profiling
-plotly==5.14.1
-plotly-express==0.4.1
-scikit-learn==1.2.2
-seaborn==0.12.2
-pmdarima==1.8.2
-statsmodels==0.13.3
-surprise==0.1
+plotly
+plotly-express
+scikit-learn
+seaborn
+pmdarima
+statsmodels
+surprise
 langchain
 streamlit_chat
-datetime==4.4
-python-dateutil==2.8.2
-transformers==4.11.0
-spacy==3.2.1
-SpeechRecognition==3.8.1
+datetime
+python-dateutil
+transformers
+spacy
+SpeechRecognition
