Update and rename requirements1.txt to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ numerize==0.12
 numpy==1.23.5
 oauthlib==3.2.2
 openpyxl==3.1.2
+
+PyAudio-0.2.11-cp38-cp38-win_amd64.whl
 #portaudio19-dev
 #portaudio
 pyaudio-wheels
